--- a/package.json
+++ b/package.json
@@ -1,36 +1,42 @@
 {
-  "name": "vis-inspect",
-  "displayName": "Vis inspect",
+  "name": "my-app",
+  "private": true,
   "version": "0.0.0",
-  "description": "A basic Plasmo extension.",
-  "author": "chevinci",
+  "type": "commonjs",
   "scripts": {
-    "dev": "plasmo dev",
-    "build": "plasmo build"
+    "dev": "vite",
+    "build": " vite build",
+    "preview": "vite preview",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
-    "@c3/dom": "^1.1.65",
-    "@c3/hooks": "1.1.110",
-    "@c3/react": "^1.0.10",
-    "@unstyled-ui/atomic": "^1.1.50",
-    "@unstyled-ui/ct-switcher": "^1.0.27",
-    "@unstyled-ui/layout": "^1.1.51",
-    "plasmo": "0.55.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "@c3/react": "^1.0.12",
+    "@pnpm/filter-workspace-packages": "^6.0.13",
+    "@scriptbot/cli": "^1.0.153",
+    "@unstyled-ui/atomic": "^1.1.51",
+    "@unstyled-ui/core": "^1.1.54",
+    "@unstyled-ui/css": "^1.1.70",
+    "@unstyled-ui/ct-switcher": "^1.0.29",
+    "@unstyled-ui/layout": "^1.1.52",
+    "lodash": "^4.17.21",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@plasmohq/prettier-plugin-sort-imports": "1.2.2",
-    "@types/chrome": "0.0.196",
-    "@types/node": "18.7.15",
-    "@types/react": "18.0.18",
-    "@types/react-dom": "18.0.6",
-    "prettier": "2.7.1",
-    "typescript": "4.8.2"
-  },
-  "manifest": {
-    "host_permissions": [
-      "https://*/*"
-    ]
+    "@babel/core": "^7.20.5",
+    "@storybook/addon-actions": "^6.5.13",
+    "@storybook/addon-essentials": "^6.5.13",
+    "@storybook/addon-interactions": "^6.5.13",
+    "@storybook/addon-links": "^6.5.13",
+    "@storybook/builder-vite": "^0.2.5",
+    "@storybook/react": "^6.5.13",
+    "@storybook/testing-library": "^0.0.13",
+    "@types/react": "^18.0.24",
+    "@types/react-dom": "^18.0.8",
+    "@vitejs/plugin-react": "^2.2.0",
+    "babel-loader": "^8.3.0",
+    "typescript": "^4.6.4",
+    "vite": "^3.2.4"
   }
 }
